--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "empleo_app",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -21,5 +20,6 @@
   "dependencies": {
     "express": "^4.17.1",
     "pug": "^3.0.2"
-  }
+  },
+  "description": ""
 }
