--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^6.0.13",
+    "mongosh": "^1.1.4",
     "pug": "^3.0.2"
   },
   "description": ""
