--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^6.0.13",
-    "pg": "^8.7.1",
     "mongosh": "^1.1.4",
-    "pug": "^3.0.2"
+    "pg": "^8.7.1",
+    "pug": "^3.0.2",
+    "puppeteer": "^12.0.0"
   },
   "description": "",
   "devDependencies": {
