--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "mongoose": "^6.0.13",
     "mongosh": "^1.1.4",
+    "nodemon": "^2.0.15",
     "pg": "^8.7.1",
     "pug": "^3.0.2",
     "puppeteer": "^12.0.0",
