--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "jws": "^4.0.0",
     "mongoose": "^6.0.13",
     "mongosh": "^1.1.4",
     "nodemon": "^2.0.15",
