--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "jws": "^4.0.0",
@@ -29,12 +30,10 @@
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.3",
+    "psql": "^0.0.1",
     "pug": "^3.0.2",
     "puppeteer": "^12.0.0",
     "regex": "^0.1.1"
   },
-  "description": "",
-  "devDependencies": {
-    "dotenv": "^10.0.0"
-  }
+  "description": ""
 }
